[project]
name = "pyfix-imports"
version = "0.2.1"
description = "python tool that will fix your missing imports"
authors = [{ name = "Rishabh", email = "jharishabh672003@gmail.com" }]
dependencies = [
    "click>=8.1.7",
    "pyflakes>=3.2.0",
    "importlib>=1.0.4",
    "xdg-base-dirs>=6.0.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "GPL-3.0-only" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[project.scripts]
pyfix-imports = "pyfix_imports.commandline.cli:cli"
